# fx_finBERT

./: .gitignore  CLAUDE.md  clean_dictionary.py  loss_function_solution.md  main.py  plan.md  pyproject.toml  setup_prompt.md
configs/: labeling_prompt.txt  training_config.yaml
results/: label_quality_report.md
scripts/: 01_filter_and_map.py  01_sample_articles.py  02_compute_labels.py  03_split_dataset.py  04_finetune.py  baseline_tfidf.py  finetune_patch.py
utils/: __init__.py  labeling.py  stopwords.py  text_cleaning.py
