[project]
name = "fx-sentiment"
version = "0.1.0"
description = "환율 뉴스 감성 분석 모델 파인튜닝 (KR-FinBERT 기반)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "finance-datareader>=0.9.110",
    "konlpy>=0.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
